src/gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP #This means that the IP assigned to this service is only accesible from inside the cluster
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
